[ OTX SERVER 2X - FEETADS EDITS]
	//17/10
	-- fixed house protect and enable by talkaction
	-- fixed login delay in combat.cpp
	-- added quest all in one action .lua
	
	-- life and mana in percentual by config.lua
	-- fixed configManager issues
	
	-- added script elementalWand.lua on weapons

	// 15/10
	- Added Reduce Skill Loss
	- Global Libs
	- Protect Login Delay in source (protect fast login and can't hit in delay)
	- Exp in cast, can be enable in config.lua
	- Autoloot system, can be enable in config.lua
	- Clean datapack with custom scripts and libs


[ OTX Server 2 - CHANGE LOG
	Project Name
		OTX Server

	OTX Server is based on:
		The Forgotten Server :: Version: 0.3.7 - Crying Damson
			and OTX Server 2.1.0 :: Version "Simple"

	Codenamed
		SNAPSHOT

	Website
		https://github.com/mattyx14/otxserver/tree/otxserv2/

	DEVELOPERS
		Project Manager and Founder
			Matt Gomez

		OTX Server 2 - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
			Matt Gomez
			Matheus Matias

		Special Thanks(s)
			The Forgotten - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
				https://github.com/otland/forgottenserver/graphs/contributors/

			The OTClient - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
				https://github.com/edubart/otclient/graphs/contributors/

			FORGOTTENSERVER-ORTS - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
				Old: https://github.com/PrinterLUA/FORGOTTENSERVER-ORTS/graphs/contributors/
				New: https://github.com/orts/server/graphs/contributors/

			OpenTibia - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
				https://github.com/opentibia/server/graphs/contributors/
				Shivoc, Tliff, Haktivex, Fandoras, SimOne, mips_act, Primer, wrzasq, jakexblaster,
				Remere, Kornholijo, Elf, edubart and Dalkon.

			Old OTX Server 2 - C++ Programmer(s), Committer(s) and Data Directory Manager(s)
				https://github.com/mattyx14/otxserver/graphs/contributors/