@@ -66,6 +66,5 @@ function onLogin(cid)
 	registerCreatureEvent(cid, "partyAndGuildProtection")
 	registerCreatureEvent(cid, "PlayerTrade")
 
-	doCreatureSetStorage(cid, "save", (os.time() + 120))
 	return true
 end
