@@ -232,6 +232,7 @@ class ConfigManager
 			RATE_MONSTER_HEALTH,
 			RATE_MONSTER_MANA,
 			RATE_MONSTER_ATTACK,
+			MAX_ABSORB_PERCENT,
 			RATE_MONSTER_DEFENSE,
 			FORMULA_LEVEL,
 			FORMULA_MAGIC,
@@ -273,6 +274,7 @@ class ConfigManager
 			SHOW_MANA_CHANGE,
 			BROADCAST_BANISHMENTS,
 			MW_REPLACE_ENABLE,
+			USE_MAX_ABSORBALL,
 			SAVE_GLOBAL_STORAGE,
 			SAVE_PLAYER_DATA,
 			INGAME_GUILD_MANAGEMENT,
