@@ -1,4 +1,12 @@
 [ OTX SERVER 2X - FEETADS EDITS]
+	//22/10
+	-- added a system for not counting frags in specific areas, creaturescripts/noCountFragInArea.
+	-- added not counting frags in case of killing someone from the same IP (enabled from config.lua).
+	
+	//20/10
+	-- added mwall change sprite only for player
+	-- added monsterBoost system
+	
 	//17/10
 	-- fixed house protect and enable by talkaction
 	-- fixed login delay in combat.cpp
